# gomoku

./: .gitignore  GEMINI.md  README.md
engine/: CMakeLists.txt
engine/src/: batch_inference_executor.cpp  batch_inference_executor.h  batched_blocking_queue.h  board.cpp  board.h  evaluator.h  mcts.cpp  mcts.h  neural_net_evaluator.cpp  neural_net_evaluator.h  random_evaluator.cpp  random_evaluator.h
engine/tests/: batched_blocking_queue_test.cpp  board_debug.cpp  board_test.cpp  mcts_test.cpp  neural_net_evaluator_test.cpp  retract_test.cpp
protocol/: README.md  spec.md
protocol/docs/: protocol_v2.md
protocol/examples/: random_player.py  spectator.py
protocol/python/: pyproject.toml
protocol/python/gomoku_match/: __init__.py  __main__.py  board.py  elo.py  observer_client.py  persistence.py  player_client.py  protocol.py  server.py  tcp_transport.py  transports.py
protocol/python/gomoku_match.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
protocol/python/gomoku_match/adapters/: __init__.py  gomocup.py
protocol/tests/python/: fake_gomocup_engine.py  test_board.py  test_elo.py  test_gomocup_adapter.py  test_protocol.py  test_server.py  test_tcp_transport.py
python/: create_model.py  cumulative_dataset.py  curriculum.py  curriculum_schedule.json  manager.py  requirements.txt  test_loader.py  train.py
torch_test/: CMakeLists.txt  test_torch.cpp
